fix|ops: ffmpeg and ffprobe moved & dockerfile